2011-10-20  Valek Filippov

		* VSD: textfield parsing improvements.

2011-10-18  Valek Filippov

		* MDB: added initial support, ported some data from mdbtools.

2011-10-14  Valek Filippov

		* XLS: save/insert/more/less implemented

2011-10-10  Valek Filippov

		* XLS: more records parsing.

2011-10-09  Valek Filippov

		* EMF+: fix saving of modified records.

2011-10-06  Valek Filippov

		* FH: adjust parsing of records based on 64k+ files.

2011-10-01  Valek Filippov

		* FH: saving.

2011-09-31  Valek Filippov

		* XLS: xls.parse didn't return page.type

2011-09-30  Valek Filippov

		* XLS: parse CellXF part of XF record.

2011-09-29  Valek Filippov

		* FH: XForm parsing based on flags

2011-09-27  Valek Filippov

		* FH: More records parsing, rewrite Xform as two parts record.
		* ?r command with a/u/x subargs.

2011-09-25  Valek Filippov

		* FH: more records parsing.

2011-09-23  Valek Filippov

		* Fix hexdump scrolling.
		* Improve FH detection.

2011-09-19  Valek Filippov

		* VSD: unstable support for ver 5.

2011-09-18  Valek Filippov

		* FH: show FH8 dictionary.

2011-09-18  Valek Filippov

		* FH: add parsing of v8 dictionary.

2011-09-15  Valek Filippov

		* FH: link to XForm in Rectangle and Oval.

2011-09-11  Valek Filippov

		* FH: Parse coords for Rectangle and Oval, minimal BasicLine parsing.
		* Add tooltip with FH X/Y for 2 and 4 bytes hexdump selections.

2011-09-10  Valek Filippov

		* Added '?a' and '?u' commands, chop spaces from '?x'.
		* Improvements in search result display.
		* CDR: search improvements.

2011-09-09  Valek Filippov

		* CDR: list all args in 'loda'

2011-09-08  Valek Filippov

		* Added '?x' command.

2011-09-07  Valek Filippov

		* Extended Doc.dict to support CDR r.e.

2011-09-06  Alexandre Prokoudine

		* RX2: Committed Frankie Fisher improvements 

2011-09-04  Valek Filippov

		* VSD: Parse TextField.
		* CDR: Adopted cdr_explorer RIFF parser.

2011-09-01  Valek Filippov

		* FH: More records.
