@@ -92,7 +92,7 @@ def parse (page, data, parent):
 		# compressed stream
 		try:
 			if model:
-				value = inflate.inflate_vba(data)
+				value = inflate.inflate_vba(data,page.type)
 				iter1 = model.append(parent,None)
 				model.set_value(iter1,0,"[Decompressed stream]")
 				model.set_value(iter1,1,("vba","dir"))
@@ -129,7 +129,7 @@ def parse (page, data, parent):
 			cdata = model.get_value(citer,3)
 			if ord(cdata[mods[cname]]) == 1:
 				try:
-					cvalue = inflate.inflate_vba(cdata[mods[cname]:])
+					cvalue = inflate.inflate_vba(cdata[mods[cname]:],page.type)
 					iter1 = model.append(citer,None)
 					model.set_value(iter1,0,"VBA SourceCode")
 					model.set_value(iter1,1,("vba","src",mods[cname]))
